--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 
 </body>
-    <p style="color:red"> 今日はGit学習の日です。</p>
+    <p style="color:blue"> Gitプッシュ：3回目！</p>
     Azureを使います
 
 </html>
